slurm-36.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperasexamplerun.py", line 72
    model.add(Dense({{choice([100,150,50]}})))
                                         ^
SyntaxError: invalid syntax
